--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ author:
   
             Zu Group (ETH Zurich)"
   avatar : "/assets/images/infinity.png"
-  bio    : "The **Information Ecology** group is interested in understanding the evolutioanry and ecological processes of the chemical communications between plants and insects by integrating concepts from biology, chemistry and information theory."
+  bio    : "The **Information Ecology** group aims to scale up the mechanistic understanding of species interactions from species to community level by integrating information theory into eco-evolutionary theories. The work combines empirical and theoretical aspects, and aims to deliver novel insights on how to improve ecosystem stability and sustainability under global changes."
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
