--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,8 @@
 main:
   - title: "Research"
     url: /research/
+  - title: "Publications"
+    url: /publications/
   - title: "People"
     url: /people/
   - title: "Resources"
