--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ author:
   
             Zu Group (ETH Zurich)"
   avatar : "/assets/images/infinity.png"
-  bio    : "The **Information Ecology** group aims to scale up the mechanistic understanding of species interactions from species to community level by integrating information theory into eco-evolutionary theories. The work combines empirical and theoretical aspects, and aims to deliver novel insights on how to improve ecosystem stability and sustainability under global changes."
+  bio    : "We aim to integrate information theory into ecological and evolutionary theories, to gain mechanistic understanding on species interactions in ecological communities."
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
