--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ baseurl:
 twitter_username: pengjuanz
 github_username: PengjuanZu
 minimal_mistakes_skin: default
-search: false
+search: true
 
 # Build settings
 markdown: kramdown
